crates/stano-di-macros/tests/ui/service_on_non_struct.stderr
error: #[service] can only be used on structs
 --> tests/ui/service_on_non_struct.rs:4:1
  |
4 | / enum NotAStruct {
5 | |     Variant,
6 | | }
  | |_^
