crates/stano-di-macros/tests/ui/service_on_non_struct.rs
use stano_di_macros::service;

#[service]
enum NotAStruct {
    Variant,
}

fn main() {}
